[gd_scene load_steps=30 format=3 uid="uid://b84a3o0vgjdmf"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_uvbbd"]
[ext_resource type="Resource" uid="uid://brgxok2paxgw" path="res://Upgrades/Coin.tres" id="2_jmf0d"]
[ext_resource type="Resource" uid="uid://h68udoihxw1p" path="res://Upgrades/Iron_Key.tres" id="3_jqn3n"]
[ext_resource type="Resource" uid="uid://bai7a6b7y6u3y" path="res://Upgrades/Rusty_Key.tres" id="4_d4ie2"]
[ext_resource type="PackedScene" uid="uid://dno7xid3tv17d" path="res://scenes/dashboard.tscn" id="5_5d8yj"]
[ext_resource type="Resource" uid="uid://b4o5ix58fqp27" path="res://Upgrades/Snake_Fang.tres" id="5_uqm5g"]
[ext_resource type="Resource" uid="uid://dnex2aapd7nvv" path="res://Upgrades/Key_Ring.tres" id="6_r6voh"]
[ext_resource type="Resource" uid="uid://c3jeyhghx0sgy" path="res://Upgrades/Milk.tres" id="7_1v8cs"]
[ext_resource type="Resource" uid="uid://bx1svtnhbmqig" path="res://Upgrades/Monster_Hand.tres" id="8_743kg"]
[ext_resource type="Texture2D" uid="uid://b26ue37rnh21r" path="res://assets/Doors/door1.png" id="8_cgrh2"]
[ext_resource type="Resource" uid="uid://b61mdgtbr4v8k" path="res://Upgrades/cuff_links.tres" id="9_y723m"]
[ext_resource type="Texture2D" uid="uid://xjq3gxtfnv71" path="res://assets/eye.png" id="9_yh4x6"]
[ext_resource type="Texture2D" uid="uid://0xbxp8aqtwtq" path="res://assets/Upgrades/Clover.png" id="10_u75pn"]
[ext_resource type="Resource" uid="uid://c2oo23xd3x785" path="res://Upgrades/Shades.tres" id="10_vuf7m"]
[ext_resource type="AudioStream" uid="uid://d2frqarbv3qnk" path="res://assets/Audio/SFX/buy.wav" id="11_pkvse"]
[ext_resource type="Texture2D" uid="uid://cxkqxdxob0wb" path="res://assets/pixel_bell.png" id="12_cq3om"]
[ext_resource type="AudioStream" uid="uid://bj3h0nrdmxl3q" path="res://assets/Audio/SFX/reroll.wav" id="12_hta76"]
[ext_resource type="AudioStream" uid="uid://baajj7g7wivk7" path="res://assets/Audio/SFX/out_of_money.wav" id="13_1jol7"]
[ext_resource type="Texture2D" uid="uid://efiivj31dqv6" path="res://assets/pixel_bell_depressed.png" id="13_brnwm"]
[ext_resource type="AudioStream" uid="uid://smmx05d83umd" path="res://assets/Audio/SFX/free_reroll.wav" id="13_cw61c"]
[ext_resource type="Texture2D" uid="uid://28707hjh87n0" path="res://assets/Improved_smaller_shopkeeper.png" id="14_iqlq0"]
[ext_resource type="Texture2D" uid="uid://buw6v0j2tuqw8" path="res://assets/Backgrounds/New_Room.png" id="14_porh4"]
[ext_resource type="AudioStream" uid="uid://b6fd3gpbl2ld" path="res://assets/Audio/SFX/open_door.wav" id="15_24dd0"]
[ext_resource type="StyleBox" uid="uid://dehb46trjw82d" path="res://assets/UI/Stylebox_1.tres" id="18_addwe"]
[ext_resource type="Texture2D" uid="uid://cnmb1jod855ox" path="res://assets/UI/Door_Closed.png" id="19_jhu5i"]
[ext_resource type="Shader" path="res://assets/Shaders/Outline.gdshader" id="19_tsiju"]
[ext_resource type="Texture2D" uid="uid://kwiatwqrlr3o" path="res://assets/UI/Door_Open.png" id="20_tc5ql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukpmh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1kh6i"]
shader = ExtResource("19_tsiju")
shader_parameter/width = null
shader_parameter/outline_color = null
shader_parameter/fade = 1.0

[node name="Shop" type="Node"]
script = ExtResource("1_uvbbd")
available_upgrades = [ExtResource("3_jqn3n"), ExtResource("4_d4ie2"), ExtResource("2_jmf0d"), ExtResource("5_uqm5g"), ExtResource("6_r6voh"), ExtResource("7_1v8cs"), ExtResource("8_743kg"), ExtResource("9_y723m"), ExtResource("10_vuf7m")]
labels = [NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Label"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Label 1"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Label 2")]
texs = [NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Item"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Item 1"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Item 2")]
buttons = [NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 1"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 2"), NodePath("CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 3")]
buy_sound = ExtResource("11_pkvse")
reroll_sound = ExtResource("12_hta76")
free_reroll_sound = ExtResource("13_cw61c")
broke_sound = ExtResource("13_1jol7")
leave_sound = ExtResource("15_24dd0")

[node name="Dashboard" parent="." instance=ExtResource("5_5d8yj")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 706.0
offset_top = 264.0
offset_right = 1022.0
offset_bottom = 446.0
rotation = 0.219528
theme_override_styles/panel = SubResource("StyleBoxEmpty_ukpmh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 74
theme_override_constants/v_separation = 16
columns = 3

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Coin"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label 1" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Iron Key"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label 2" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rusty Key"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Item" type="TextureRect" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_yh4x6")
stretch_mode = 5

[node name="Item 1" type="TextureRect" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_yh4x6")
stretch_mode = 5

[node name="Item 2" type="TextureRect" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("10_u75pn")
stretch_mode = 5

[node name="Button 1" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Buy"

[node name="Button 2" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Buy"

[node name="Button 3" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Buy"

[node name="Bell_Button" type="TextureButton" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_1kh6i")
offset_left = 529.0
offset_top = 498.0
offset_right = 593.0
offset_bottom = 562.0
texture_normal = ExtResource("12_cq3om")
texture_pressed = ExtResource("13_brnwm")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2"]
offset_left = 912.0
offset_top = 565.0
offset_right = 1230.0
offset_bottom = 790.0
scale = Vector2(0.32, 0.32)
theme_override_styles/panel = ExtResource("18_addwe")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer2/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("19_jhu5i")
texture_pressed = ExtResource("20_tc5ql")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/PanelContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Exit" type="Button" parent="CanvasLayer2/PanelContainer/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"
icon = ExtResource("8_cgrh2")
expand_icon = true

[node name="ShopBG" type="Sprite2D" parent="."]
position = Vector2(542, 362)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_porh4")

[node name="Shopkeeper" type="Sprite2D" parent="."]
position = Vector2(273, 351)
scale = Vector2(6.37481, 6.37481)
texture = ExtResource("14_iqlq0")

[node name="SFX_Player" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/GridContainer/Button 3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Bell_Button" to="." method="_on_bell_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/PanelContainer/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/PanelContainer/MarginContainer/GridContainer/Exit" to="." method="_on_exit_pressed"]
